# SDMEs_fitter

./: CMakeLists.txt  README.md  run_pipeline.zsh
config/: default.cfg  schc.cfg
include/: AnalysisModule.h  BinDef.h  Chi2Fitter.h  DataSet.h  EventCache.h  EventCache_impl.h  EventData.h  FastMCInterface.h  FitPlotter.h  GavFastMC.h  LundReader.h  PhiAnalysis.h  PhysicsParams.h  ProgressBar.h  SDMEModel.h  cross.h  decay2body.h  fizika.h  generator.h  reaction.h  w_kernels.hpp
src/: main_analysis.cpp  main_fit.cpp  main_gen.cpp
